Working on cleaning up code.